# aliencraft

./: .gitignore  LICENSE  README.md  differential.py  perlin_viz.py  play.py  pyproject.toml  render.py  world.py
baselines/: ppo_sb3.py
src/aliencraft/: __init__.py  differential.py  env.py  filter.py  main.py  render.py  world.py
src/aliencraft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
