[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aliencraft"
version = "0.1.0"
description = "A meta-learning environment for procedurally generated alien crafting worlds."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=25.11.0",
    "torch>=2.8.0",
]

[project.optional-dependencies]
gym = [
    "gymnasium>=0.29",
]
baselines = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
]
render = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pillow",
    "pygame>=2.6.1",
]
dev = [
    "black>=25.11.0",
    "pytest>=8.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
